# compras-do-mes

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  compras-do-mes.sln  diesel.toml  django_service.Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
API/: compras-do-mes.csproj  compras-do-mes.http
API/Properties/: launchSettings.json
ComprasDoMes/: Program.cs  compras-do-mes.csproj  compras-do-mes.http
ComprasDoMes.Tests/: ComprasDoMes.Tests.csproj  TestUserController.cs
ComprasDoMes/Controllers/: TodoItemsController.cs  UserController.cs
ComprasDoMes/Exceptions/: EmailException.cs  PasswordException.cs  ValidationException.cs
ComprasDoMes/Models/: CommomData.cs  ComprasDoMesContext.cs  Internacionalization.cs  TodoItemModel.cs  UserModel.cs
ComprasDoMes/Properties/: launchSettings.json
compras_do_mes/: manage.py
compras_do_mes/compras_do_mes/: asgi.py  settings.py  urls.py  wsgi.py
compras_do_mes/lista_de_compras/: apps.py
lista_de_compras/: admin.py  apps.py  filters.py  models.py  password_policy.py  permissions.py  serializers.py  signals.py  urls.py  views.py
lista_de_compras/migrations/: 0001_initial.py  0002_alter_usercategorys_unique_together_and_more.py  0002_users_email.py  0003_alter_usercategorys_unique_together_and_more.py  0004_alter_userproducts_price_alter_users_is_active.py  0005_alter_market_user_id_alter_shoppinglist_user_id_and_more.py  0006_alter_market_user_id_alter_shoppinglist_user_id_and_more.py
migrations/2024-03-23-025440_users/: up.sql
migrations/2024-03-24-203827_users/: up.sql
migrations/2024-03-27-173014_default_categorys/: down.sql  up.sql
migrations/2024-03-27-173912_unity_types/: down.sql  up.sql
migrations/2024-03-27-173939_default_products/: down.sql  up.sql
migrations/2024-03-27-210012_market/: down.sql  up.sql
migrations/2024-03-27-210329_user_categorys/: down.sql  up.sql
migrations/2024-03-27-210608_user_products/: down.sql  up.sql
migrations/2024-03-27-212319_shopping_list/: down.sql  up.sql
migrations/2024-03-27-212620_shopping_log/: down.sql  up.sql
migrations/2024-03-27-213245_product_list/: down.sql  up.sql
setup/: settings.py  urls.py
src/: auth.rs  connection.rs  lib.rs  main.rs  schema.rs
src/auth/: jwt_auth.rs  urls.rs
src/constants/: constants.rs
src/models/: default_categorys.rs  default_products.rs  market.rs  product_list.rs  shopping_list.rs  (+5 more)
(+10 files in other folders)
