[package]
name = "compras-do-mes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bcrypt = "0.15.1"
chrono = { version = "0.4.35", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
